--- a/eCustoms/eCustoms.csproj
+++ b/eCustoms/eCustoms.csproj
@@ -59,7 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigSettings.cs" />
+    <Compile Include="CommonLibrary.cs" />
     <Compile Include="GetBeiAnDanDataForm.cs">
       <SubType>Form</SubType>
     </Compile>
